<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetails"
    android:padding="2dp"
    android:background="@color/black_primary">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <FrameLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/imageMovie"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            />

            <WebView
                android:id="@+id/webViewVideo"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_media_play"
            android:contentDescription="@string/action_settings"/>
        </FrameLayout>


        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/layoutSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/txtGenres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/gray"
                    android:text="@string/genders"/>

                <TextView
                    android:id="@+id/txtGenresMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/white"
                    android:text="@string/genders"/>
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/txtRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/gray"
                    android:text="@string/rate"/>

                <TextView
                    android:id="@+id/txtRateMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/white"
                    android:text="@string/rate"/>
            </android.support.v7.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/txtSummaryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textColor="@color/red_914"
                android:text="@string/sinopsis"
                android:textSize="@dimen/dp20"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/txtSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textColor="@color/white"/>






        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp5">

            <TextView
                android:id="@+id/txtCommentTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textColor="@color/red_914"
                android:text="@string/comment"
                android:textSize="@dimen/dp20"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/etComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:layout_gravity="top"
                android:textColor="@color/white"
                android:focusedByDefault="true"
                tools:targetApi="o" />

            <Button
                android:id="@+id/btnSaveComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:background="@color/red_914"
                android:textColor="@color/white"
                android:shadowRadius="@android:integer/config_longAnimTime"                />
        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    </ScrollView>

</android.support.v7.widget.LinearLayoutCompat>